--- a/src/app/layout/hoja-vida/capacitacion-cursos/capacitacion-cursos.component.html
+++ b/src/app/layout/hoja-vida/capacitacion-cursos/capacitacion-cursos.component.html
@@ -77,7 +77,7 @@
               <b class="text-danger">*</b> Institución:
             </label>
             <input type="text" [(ngModel)]="selectedCourse.institution" class="form-control text-uppercase"
-                   id="institucion" name="institucion" placeholder="Nombre de la Institución" required>
+                   maxlength="50" id="institucion" name="institucion" placeholder="Nombre de la Institución" required>
           </div>
           <div class="form-group">
             <label>
@@ -94,7 +94,7 @@
               <b class="text-danger">*</b> Nombre del Evento:
             </label>
             <input type="text" [(ngModel)]="selectedCourse.event_name" class="form-control  text-uppercase"
-                   id="event_name" name="event_name" placeholder="Nombre del Evento" required>
+                   maxlength="50" id="event_name" name="event_name" placeholder="Nombre del Evento" required>
           </div>
           <div class="form-group">
             <div class="row">
@@ -103,25 +103,26 @@
                   <b class="text-danger">*</b> Fecha Inicio:
                 </label>
                 <input type="date" class="form-control" name="start_date" id="start_date"
-                       [(ngModel)]="selectedCourse.start_date" required>
+                       (keydown)="false" [(ngModel)]="selectedCourse.start_date" required>
               </div>
               <div class="col-lg-6">
                 <label for="finish_date">
                   <b class="text-danger">*</b> Fecha Fin:
                 </label>
                 <input type="date" class="form-control" name="start_date" id="finish_date"
-                       [(ngModel)]="selectedCourse.finish_date" required>
+                       (keydown)="false"
+                       [(ngModel)]="selectedCourse.finish_date" [min]="selectedCourse.start_date" required>
               </div>
             </div>
           </div>
-
           <div class="form-group">
             <div class="row">
               <div class="col-lg-6">
                 <label for="hours">
                   <b class="text-danger">*</b> Horas:
                 </label>
-                <input type="number" min="1" [(ngModel)]="selectedCourse.hours" class="form-control"
+                <input type="text" min="1" [(ngModel)]="selectedCourse.hours" class="form-control"
+                       (keypress)="validarSoloNumeros($event.key)" maxlength="3"
                        id="hours" name="hours" placeholder="Total de Horas" required>
               </div>
               <div class="col-lg-6">
