--- a/src/app/layout/hoja-vida/experiencia-profesional/experiencia-profesional.component.html
+++ b/src/app/layout/hoja-vida/experiencia-profesional/experiencia-profesional.component.html
@@ -80,6 +80,7 @@
               <b class="text-danger">*</b> Empleador:
             </label>
             <input type="text" [(ngModel)]="selectedProfessionalExperience.employer" class="form-control text-uppercase"
+                   (keypress)="validarSoloLetrasConEspacio($event.key)" maxlength="50"
                    id="employer" name="employer" placeholder="Nombre del empleador" required>
           </div>
           <div class="form-group">
@@ -87,16 +88,17 @@
               <b class="text-danger">*</b> Cargo:
             </label>
             <input type="text" [(ngModel)]="selectedProfessionalExperience.position" class="form-control text-uppercase"
-                   id="position" name="position" placeholder="Cargo" required>
+                   maxlength="50" id="position" name="position" placeholder="Cargo" required>
           </div>
           <div class="form-group">
             <label>
               <b class="text-danger">*</b> Descripción del cargo:
+              <span class="small">({{selectedProfessionalExperience.job_description.length}}/100)</span>
             </label>
-            <textarea type="text" [(ngModel)]="selectedProfessionalExperience.job_description"
-                      class="form-control  text-uppercase"
+            <textarea type="text" rows="3" [(ngModel)]="selectedProfessionalExperience.job_description"
+                      class="form-control  text-uppercase" maxlength="100"
                       id="job_description" name="job_description" placeholder="Descripción del cargo"
-                      required></textarea>
+                      required> </textarea>
           </div>
           <div class="form-group">
             <label for="trabajoActual">
@@ -120,6 +122,7 @@
                   <b class="text-danger">*</b> Fecha Fin:
                 </label>
                 <input type="date" class="form-control" name="finish_date" id="finish_date"
+                       [min]="selectedProfessionalExperience.start_date" (keydown)="false"
                        [(ngModel)]="selectedProfessionalExperience.finish_date">
               </div>
             </div>
@@ -127,9 +130,10 @@
           <div class="form-group" *ngIf="!selectedProfessionalExperience.current_work">
             <label for="reason_leave">
               <b class="text-danger">*</b> Motivo de la salidad:
+              <span class="small">({{selectedProfessionalExperience.reason_leave.length}}/100)</span>
             </label>
             <textarea type="number" min="1" [(ngModel)]="selectedProfessionalExperience.reason_leave"
-                      class="form-control text-uppercase"
+                      class="form-control text-uppercase" maxlength="100" rows="3"
                       id="reason_leave" name="reason_leave" placeholder="Motivo de la salida" required></textarea>
           </div>
         </div>
