--- a/src/app/layout/hoja-vida/fortalezas/fortalezas.component.html
+++ b/src/app/layout/hoja-vida/fortalezas/fortalezas.component.html
@@ -78,10 +78,11 @@
           </div>
           <div class="form-group">
             <label>
-              <b class="text-danger">*</b> Descripción:
+              <b class="text-danger">*</b> Descripción: <span class="small">({{selectedAbility.description.length}}
+              /400)</span>
             </label>
             <textarea type="text" [(ngModel)]="selectedAbility.description" class="form-control text-uppercase"
-                      id="description" name="description" placeholder="" required rows="10"></textarea>
+                      maxlength="400" id="description" name="description" placeholder="" required rows="11"></textarea>
           </div>
         </div>
       </div>
@@ -92,10 +93,12 @@
         {{messages['requiredFields']['text']}}
       </h6>
       <button class="btn btn-success" (click)="c('save')" [disabled]="formCtrl.form.invalid">
-        <span class="{{messages['saveConfirmationDialog']['iconOk']}}"></span>&nbsp;{{messages['saveConfirmationDialog']['ok']}}
+        <span
+          class="{{messages['saveConfirmationDialog']['iconOk']}}"></span>&nbsp;{{messages['saveConfirmationDialog']['ok']}}
       </button>
       <button class="btn btn-danger" (click)="c('close')">
-        <span class="{{messages['saveConfirmationDialog']['iconCancel']}}"></span>&nbsp;{{messages['saveConfirmationDialog']['cancel']}}
+        <span
+          class="{{messages['saveConfirmationDialog']['iconCancel']}}"></span>&nbsp;{{messages['saveConfirmationDialog']['cancel']}}
       </button>
     </div>
   </form>
